--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -1,6 +1,6 @@
- <ion-view title="homebase">
+ <ion-view title="Homebase">
    <ion-content>
-     <div style="box-sizing: border-box; color: lightgray">
+     <div>
       HOMEBASE
     </div>
     <div>
@@ -15,7 +15,7 @@
       Pig turkey drumstick beef sausage cupim ground round ham ham hock boudin filet mignon
       prosciutto porchetta meatball.
     </div>
-    <div style="box-sizing: border-box; color: lightgray">
+    <div>
       <button>SEARCH</button>
       <button>BUILD</button>
       <button>SLEEP</button>
