testing looting button

--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -16,7 +16,7 @@
       prosciutto porchetta meatball.
     </div>
     <div>
-      <button>SEARCH</button>
+      <button data-component="looting">SEARCH</button>
       <button>BUILD</button>
       <button>SLEEP</button>
       <button>EAT</button>
