--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -1,19 +1,16 @@
- <ion-view title="Homebase">
-   <ion-content>
-     <div>
-      HOMEBASE
-    </div>
+<ion-view title="Homebase">
+  <ion-content>
+    <div>HOMEBASE</div>
     <div>
       Insert flavor text here.
-      Bacon ipsum dolor amet filet mignon alcatra pork,
-      corned beef spare ribs pig t-bone pork loin jowl fatback kielbasa prosciutto jerky.
-      Sirloin capicola pork loin kielbasa short loin corned beef filet mignon beef doner
-      swine pork chop pig. Frankfurter shank tenderloin, ribeye pastrami turkey rump
-      meatball kielbasa picanha boudin porchetta doner corned beef. Meatloaf beef alcatra
-      meatball shankle capicola swine turducken. Pork ribeye pastrami, chicken shank filet
-      mignon short loin turducken beef ribs biltong spare ribs beef jowl hamburger pig.
-      Pig turkey drumstick beef sausage cupim ground round ham ham hock boudin filet mignon
-      prosciutto porchetta meatball.
+      Bacon filet mignon pork,
+      corned beef spare ribs t-bone pork loin kielbasa prosciutto jerky.
+      Sirloin pork loin kielbasa short loin corned beef filet mignon
+      swine pork chop shank tenderloin, ribeye pastrami turkey ham
+      kielbasa corned beef. beef alcatra turducken. Pork ribeye pastrami,
+      chicken shank filet mignon short loin turducken beef ribs spare ribs
+      beef hamburger turkey drumstick beef sausage ground round ham hock
+      filet mignon prosciutto porchetta meatball.
     </div>
     <div>
       <button data-component="looting">SEARCH</button>
