--- a/www/templates/inventory.html
+++ b/www/templates/inventory.html
@@ -1,8 +1,10 @@
 <ion-view title="inventory">
   <ion-content>
-    some text
-    <div ng-repeat="item in $ctrl.playerData">
-      {{item.name}}: {{item.lootCount}}
-    </div>
+    <div>THIS IS THE INVENTORY</div>
+    <!--<div ng-repeat="item in $ctrl.playerData">-->
+      <!--{{item.name}}: {{item.lootCount}}-->
+    <!--</div>-->
   </ion-content>
 </ion-view>
+
+
