--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,6 +1,6 @@
 <ion-view title="Locations">
   <ion-content>
-    some text
+    <h3>Locations to Visit</h3>
     <div ng-repeat="location in $ctrl.locations">
       {{location.name}}
 
