--- a/www/css/style.css
+++ b/www/css/style.css
@@ -41,3 +41,12 @@ button.right {
 
 .border-box { box-sizing:border-box; -moz-box-sizing: border-box; }
 
+#status {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 10;
+  text-align: center;
+}
+
