--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
     <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
 
       <content>
-        <button ng-if="vm.displayName" class="md-raised" ng-click="vm.logout()">You are {{ vm.displayName }}</button>
+        <button ng-if="vm.displayName" class="md-raised" ng-click="vm.logout()">You are logged in as {{ vm.displayName }}. Click here to log out.</button>
         <button class="md-raised md-primary" ng-click="vm.login('facebook')">Log in with Facebook</button>
         <button class="md-raised md-primary" ng-click="vm.login('google')">Log in with Google</button>
         <button class="md-raised md-primary" ng-click="vm.showEmailLogin()">Log in with Email</button>
