--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-pane>
   <div class="menu">
-    <div ng-app="starter"><button class="button button-block" ng-click="vm.runGame()">Start Game</button></div>
-    <div ng-app="starter"><button class="button button-block">Load Game</button></div>
+    <div ng-app="starter"><button class="button button-block" ng-click="vm.resolve()">Start Game</button></div>
+    <div ng-app="starter"><button class="button button-block" ng-if="vm.resolve()">Load Game</button></div>
     <div ng-app="starter"><button class="button button-block">Settings</button></div>
     <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
 
