old and desc to locale added

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,9 +11,9 @@
         <div ng-app="starter">
           <button class="button button-block">Settings</button>
         </div>
-        <div ng-app="starter">
+        <!--<div ng-app="starter">
           <button class="button button-block" data-component="looting">Loot Test</button>
-        </div>
+        </div>-->
       </div>
 
       <content><br><br>
