--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,12 +25,12 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-pizza" menu-toggle="left">
         </button>
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="right">
+        <button class="button button-icon button-clear ion-icecream" menu-toggle="right">
         </button>
       </ion-nav-buttons>
 
@@ -45,16 +45,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item>
-          Some Text
+          Locations:<div ng-show="vm.displayName">
         </ion-item>
       </ion-list>
     </ion-content>
@@ -67,16 +58,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item>
-          Some Text
+          Player Inventory:
         </ion-item>
       </ion-list>
     </ion-content>
