--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,7 +4,7 @@
     <div class="xmenu">
       <div ng-show="vm.displayName">
         <div ng-app="starter">
-          <button class="button button-block" ng-click="vm.start()">Start Game</button>
+          <button class="button button-block" ng-click="vm.gameStart()">Start Game</button>
         </div>
         <div ng-app="starter">
           <button class="button button-block" ng-click="vm.start()">Load Game</button>
