--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,9 +12,9 @@
         <div ng-app="starter">
           <button class="button button-block">Settings</button>
         </div>
-        <!--<div ng-app="starter">
-          <button class="button button-block" data-component="looting">Loot Test</button>
-        </div>-->
+        <div ng-app="starter">
+          <button class="button button-block" ng-click="vm.getLoot()">Loot Test</button>
+        </div>
       </div>
 
       <content>
