--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,20 +2,18 @@
   <header id="loginHead">Survival Gears</header>
   <ion-content>
     <div class="xmenu">
-      <div ng-show="vm.displayName">
-        <div ng-app="starter">
+        <div ng-app="starter" ng-show="vm.displayName">
           <button class="button button-block" ng-click="vm.gameStart()">Start Game</button>
         </div>
-        <div ng-app="starter">
-          <button class="button button-block" ng-click="vm.start()">Load Game</button>
+        <div ng-app="starter" ng-show="vm.displayName">
+          <button class="button button-block" ng-click="vm.loadGame()">Load Game</button>
         </div>
-        <div ng-app="starter">
+        <div ng-app="starter" ng-show="vm.displayName">
           <button class="button button-block">Settings</button>
         </div>
-        <div ng-app="starter">
+        <div ng-app="starter" ng-show="vm.displayName">
           <button class="button button-block" ng-click="vm.getLoot()">Loot Test</button>
         </div>
-      </div>
 
       <content>
         <button ng-if="!vm.displayName" class="button button-positive" id="fb" ng-click="vm.login('facebook')">Log in with
