--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -58,7 +58,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Player Inventory:
+          Inventory
         </ion-item>
       </ion-list>
     </ion-content>
