--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,8 +1,7 @@
 ion-content {
   background-image: url(../survivor1.jpg);
   background-size: cover;
-  min-height: 100%;
-  min-width: 100%;
+  background-position: center center;
 }
 
 .xmenu {
