--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -45,7 +45,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Locations:<div ng-show="vm.displayName">
+          Locations:<div ng-show="vm.displayName"></div>
         </ion-item>
       </ion-list>
     </ion-content>
@@ -58,7 +58,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Inventory
+          Inventory: <div ng-show="vm.displayName"></div>
         </ion-item>
       </ion-list>
     </ion-content>
