--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -18,14 +18,14 @@
 
         <content>
           <button ng-if="!vm.displayName" class="button button-positive" id="fb" ng-click="vm.login('facebook')">Log in with
-            <span class="ion-social-facebook"></span></button>
-          <br><br>
+            <span class="ion-social-facebook"></span>
+          </button><br><br>
           <button ng-if="!vm.displayName" class="button button-assertive" id="google" ng-click="vm.login('google')">Log in
-            with <span class="ion-social-google"></span></button>
-          <br><br>
+            with <span class="ion-social-google"></span>
+          </button><br><br>
           <button ng-if="!vm.displayName" class="button button-balanced" id="mailbutton" ng-click="vm.showEmailLogin()">Log in
-            with <span class="ion-email"></span></button>
-          <br>
+            with <span class="ion-email"></span>
+          </button><br><br>
           <a ng-if="vm.displayName" id="loggedIn">You are logged in as {{ vm.displayName }}.</a><br>
           <button id="logout" ng-if="vm.displayName" ng-click="vm.logout()">Click here to log out
           </button>
