--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -32,10 +32,10 @@
     <div ng-repeat="Wood in $ctrl.playerData">{{item.name}} : {{item.Count}}</div>
     <br>
     <div>
-      <button data-component="looting">SEARCH</button>
-      <button>BUILD</button>
-      <button>SLEEP</button>
-      <button>EAT</button>
+      <button class="leftmost" data-component="looting">SEARCH</button>
+      <button class="buildbutton">BUILD</button>
+      <button class="sleepy">SLEEP</button>
+      <button class="hungry">EAT</button>
     </div>
   </ion-content>
 </ion-view>
