--- a/www/templates/inventory.html
+++ b/www/templates/inventory.html
@@ -1,9 +1,9 @@
 <ion-view title="inventory">
   <ion-content>
     <div>THIS IS THE INVENTORY</div>
-    <!--<div ng-repeat="item in $ctrl.playerData">-->
-      <!--{{item.name}}: {{item.lootCount}}-->
-    <!--</div>-->
+    <!--<div ng-repeat="item in fl.playerData"
+      {{item.name}}: {{item.lootCount}
+    </div>-->
   </ion-content>
 </ion-view>
 
