--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -1,6 +1,6 @@
 <ion-view title="Homebase">
   <ion-content>
-    <div>THIS IS YOUR HOMEBASE</div><br>
+    <div class="homebase">THIS IS YOUR HOMEBASE</div><br>
     <div>
       Insert flavor text here.
       Bacon filet mignon pork,
