--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,12 +25,12 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-pizza" menu-toggle="left">
+        <button class="button button-icon button-clear ion-earth" menu-toggle="left">
         </button>
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-icecream" menu-toggle="right">
+        <button class="button button-icon button-clear ion-clipboard" menu-toggle="right">
         </button>
       </ion-nav-buttons>
 
