--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -1,7 +1,7 @@
 <ion-view title="Homebase">
   <ion-content>
     <div class="homebase">THIS IS YOUR HOMEBASE</div><br>
-    <div>
+    <div class="bacon">
       Insert flavor text here.
       Bacon filet mignon pork,
       corned beef spare ribs t-bone pork loin kielbasa prosciutto jerky.
@@ -21,8 +21,9 @@
 
     <br>
     <div>
-      <button class="leftmost" ng-click="hb.getLoot()">SCAVENGE</button>
-      <button class="buildbutton">BUILD</button>
+      <button class="button leftmost" ng-click="hb.getLoot()">SCAVENGE</button>
+      <button class="button buildbutton">BUILD</button>
+      <button class="button return">Return to Main Menu</button>
     </div>
   </ion-content>
 </ion-view>
