--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -7,8 +7,8 @@
 
     <span>YOUR MATERIALS:</span><br><br>
 
-    <div ng-repeat="item in hb.playerData">
-      {{item.name}}: {{item.lootCount}}
+    <div ng-repeat="item in hb.playerData">You just found some
+      {{item.name}}. You now have {{item.lootCount}} {{item.name}}.
     </div>
 
     <br>
