--- a/www/css/style.css
+++ b/www/css/style.css
@@ -156,3 +156,11 @@ button.right {
   margin: 0 auto;
   max-width: 420px;
 }
+
+.left-menu{
+  background-image: url("http://static2.gamespot.com/uploads/original/1365/13658182/2912914-fallout4_concept_blast_1434323459.jpg");
+}
+
+.right-menu{
+  background-image: url("http://vignette3.wikia.nocookie.net/fallout/images/9/90/Fallout_4_-_Launch_Trailer/revision/latest/scale-to-width-down/315?cb=20151105205717");
+}
