--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,24 +1,5 @@
-<!--<ion-view title="Survival Gears">-->
-  <!--<ion-nav-buttons side="left">-->
-    <!--<button class="button button-icon button-clear ion-pizza" menu-toggle="left">-->
-    <!--</button>-->
-  <!--</ion-nav-buttons>-->
-  <!--<ion-nav-buttons side="right">-->
-    <!--<button class="button button-icon button-clear ion-icecream" menu-toggle="right">-->
-    <!--</button>-->
-  <!--</ion-nav-buttons>-->
-
-  <!--<ion-nav-view name="menuContent"></ion-nav-view>-->
-<!--</ion-view>-->
-
 <ion-side-menus>
-  <!--<ion-pane ion-side-menu-content>-->
-    <!--<ion-nav-bar class="bar-stable">-->
 
-
-
-    <!--</ion-nav-bar>-->
-  <!--</ion-pane>-->
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -40,9 +21,9 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Locations</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="left-menu">
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Locations:<div ng-show="vm.displayName"></div>
@@ -55,7 +36,7 @@
     <ion-header-bar class="bar-stable">
       <h1 class="title">Inventory</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="right-menu">
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Player Inventory: <div ng-show="vm.displayName"></div>
