--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -15,7 +15,7 @@
     <div>
       <button class="button button-block leftmost" ng-click="hb.getLoot()">SCAVENGE</button>
       <button class="button button-block buildbutton">BUILD</button>
-      <button class="button button-block return">Return to Main Menu</button>
+      <button class="button button-block return" ng-click="hb.mainMenu()">MAIN MENU</button>
     </div>
   </ion-content>
 </ion-view>
