--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -7,7 +7,7 @@
 
     <span>YOUR MATERIALS:</span><br><br>
 
-    <div ng-repeat="item in hb.playerData">You just found some
+    <div ng-repeat="item in hb.playerData">You found some
       {{item.name}}. You now have {{item.lootCount}} {{item.name}}.
     </div>
 
