--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -12,7 +12,7 @@
     </div>
 
     <br>
-    <div>
+    <div class="disbutton">
       <button class="button button-block leftmost" ng-click="hb.getLoot()">SCAVENGE</button>
       <button class="button button-block buildbutton">BUILD</button>
       <button class="button button-block return" ng-click="hb.mainMenu()">MAIN MENU</button>
