hiding extra button

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,9 +12,9 @@
           <div ng-app="starter" ng-show="vm.displayName">
             <button class="button button-block">Settings</button>
           </div>
-          <div ng-app="starter" ng-show="vm.displayName">
+          <!-- <div ng-app="starter" ng-show="vm.displayName">
             <button class="button button-block" ng-click="vm.getLoot()">Loot Test</button>
-          </div>
+          </div> -->
 
         <content>
           <button ng-if="!vm.displayName" class="button button-positive" id="fb" ng-click="vm.login('facebook')">Log in with
