diabled build button

--- a/www/templates/homebase.html
+++ b/www/templates/homebase.html
@@ -14,7 +14,7 @@
     <br>
     <div class="disbutton">
       <button class="button button-block leftmost" ng-click="hb.getLoot()">SCAVENGE</button>
-      <button class="button button-block buildbutton">BUILD</button>
+      <button class="button button-block buildbutton" disabled>BUILD</button>
       <button class="button button-block return" ng-click="hb.mainMenu()">MAIN MENU</button>
     </div>
   </ion-content>
