diabled FB button

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -17,7 +17,7 @@
           </div> -->
 
         <content>
-          <button ng-if="!vm.displayName" class="button button-positive" id="fb" ng-click="vm.login('facebook')">Log in with
+          <button ng-if="!vm.displayName" class="button button-positive" id="fb" ng-click="vm.login('facebook')" disabled>Log in with
             <span class="ion-social-facebook"></span>
           </button><br><br>
           <button ng-if="!vm.displayName" class="button button-assertive" id="google" ng-click="vm.login('google')">Log in
